--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "path": "^0.12.7",
+    "paypack-js": "^0.2.1",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^5.22.5",
